finish setting up precomp files and gitignore, add base tcp server and client code to comtvClient and Server files

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,25 @@
 *.exe
+*.db-shm
+*.db-wal
+*.opendb
+*.tlog
 
 ComTVClient/.vs/ComTVClient/v16/Browse.VC.db
 ComTVClient/.vs/ComTVClient/v16/Solution.VC.db
 ComTVServer/.vs/ComTVServer/v16/Browse.VC.db
 ComTVServer/.vs/ComTVServer/v16/Solution.VC.db
+ComTVClient/.vs/ComTVClient/v16/.suo
 ComTVServer/.vs/ComTVServer/v16/.suo
-*.tlog
+
 ComTVServer/obj/Win32/
+ComTVClient/obj/Win32/
+
 ComTVServer/.vs/ComTVServer/v16/ipch/
 ComTVServer/bin/ComTVServer_debug.exp
 ComTVServer/bin/ComTVServer_debug.lib
 ComTVServer/bin/ComTVServer_debug.pdb
-*.db-shm
-*.db-wal
-*.opendb
+
+ComTVClient/.vs/ComTVClient/v16/ipch/
+ComTVClient/bin/ComTVClient_debug.exp
+ComTVClient/bin/ComTVClient_debug.lib
+ComTVClient/bin/ComTVClient_debug.pdb
