--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ ComTVClient/.vs/ComTVClient/v16/ipch/
 ComTVClient/bin/ComTVClient_debug.exp
 ComTVClient/bin/ComTVClient_debug.lib
 ComTVClient/bin/ComTVClient_debug.pdb
+ComTVClient/bin/data/
